# badger

./: .envrc.example  .pre-commit-config.yaml  Cargo.toml  README.md  badger  justfile  mise.toml
.github/: dependabot.yml
.github/setup-env/: action.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commands.rs  main.rs  signals.rs
tests/: README.md  all.bats  util.sh
