[package]
name = "badger"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
chrono = {
  version = "0.4.45",
  default-features = false,
  features = [
    "alloc",
    "clock",
    "now",
    "std",
  ]
}
clap = { version = "4.6.1", features = ["derive"] }
nix = { version = "0.31.3", features = ["signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
